Fix nav growing larger and support dark mode

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,3 +1,26 @@
 $dark: #1e1e1e;
 
 @import "design/style.scss";
+
+html:not([data-theme="dark"]) {
+  --kt-page-bg: #eaecf3;
+  --kt-aside-bg-color: #1e1e1e;
+}
+
+aside {
+  background-color: var(--kt-aside-bg-color);
+  width: 100px;
+  height: 100%;
+  position: fixed;
+}
+
+nav {
+  background-color: var(--kt-aside-bg-color);
+  width: 100%;
+}
+
+main {
+  @include media-breakpoint-up(md) {
+    margin-left: 100px;
+  }
+}
